# autopvs1-link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  SECURITY.md  claude-desktop-config.json  container-release.json  mcp_server.py  pyproject.toml  server.py
.claude/skills/autopvs1-scraper-change/: SKILL.md
.claude/skills/ci-failure-triage/: SKILL.md
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: conformance.yml  container-ci.yml  container-security.yml  docker.yml  release.yml
autopvs1_link/: __init__.py  cli.py  config.py  logging_config.py  server_manager.py  unified_server.py
autopvs1_link/api/: autopvs1_client.py  autopvs1_parsers.py  autopvs1_urls.py  autopvs1_validation.py  client_manager.py  egress.py  rest_validation.py  retry.py  variant_recoder.py
autopvs1_link/api/routes/: cache.py  cnv.py  gene.py  variant.py
autopvs1_link/mcp/: __init__.py  annotations.py  contracts.py  cost_tiers.py  envelope.py  error_guard.py  errors.py  facade.py  metadata.py  mode_validation.py  next_commands.py  notfound_guard.py  prompts.py  pvs1_glossary.py  registries.py  resolution.py  resources.py  server_info.py  service_adapters.py  telemetry.py  untrusted_content.py  upstream_errors.py  validation.py
autopvs1_link/mcp/presenters/: __init__.py  cache.py  capabilities.py  search.py  variant.py
autopvs1_link/mcp/tools/: _bulk_echo.py  _bulk_input.py  _bulk_untrusted.py  _pvs1_runners.py  bulk_tools.py  cache_tools.py  cnv_tool.py  health_tool.py  mode_errors.py  search_tool.py  variant_tool.py
autopvs1_link/middleware/: logging_middleware.py
autopvs1_link/models/: autopvs1_models.py
autopvs1_link/observability/: __init__.py  correlation.py  prometheus.py
autopvs1_link/services/: autopvs1_service.py  service_manager.py
autopvs1_link/utils/: cache_manager.py  retry_handler.py
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
docs/: api.md  architecture.md  configuration.md  deployment.md  mcp-evaluation-checklist.md  mcp-tool-catalog.md
docs/superpowers/plans/: 2026-05-11-modernize-autopvs1-link.md  2026-05-25-agentic-stack-alignment.md  2026-05-26-mcp-llm-polish.md  2026-05-31-mcp-groundedness-polish.md
docs/superpowers/plans/archive/: 2026-05-25-mcp-llm-ergonomics.md
docs/superpowers/specs/: 2026-05-11-modernize-autopvs1-link-design.md  2026-05-25-agentic-stack-alignment-design.md  2026-05-25-mcp-llm-ergonomics-design.md  2026-05-26-mcp-llm-polish-design.md  2026-05-31-mcp-groundedness-polish-design.md
scripts/: check_file_size.py  generate_mcp_tool_catalog.py
tests/: test_api_endpoints.py  test_cli.py  test_config_env_prefix.py  test_correlation_id.py  test_hgvs_redirect_functionality.py  test_real_website_parsing.py  test_retry.py  test_scraper_parsers.py
tests/conformance/: test_contract_truth_v1.py
tests/fixtures/: cnv_hg19_11-2797090-2869333-DEL.html  cnv_hg19_MYO15A_17-15000000-20000000-DEL.html  disease_mechanism_clinical_validity.html  search_MYH9.html  variant_2_48033984_G_GGATT_hg19.html  variant_hg19_BRCA1_17-41276045-ACT-A.html  variant_hg19_X-82763936-A-T.html  variant_hg38_X-83508928-A-T.html
tests/integration/: test_api_endpoints.py  test_rest_input_hardening.py
tests/mcp/: test_resources.py  test_service_adapters.py
tests/unit/: test_cache_manager.py  test_cache_routes.py  test_cli_extra.py  test_config_env_prefix.py  test_config_settings.py  test_defusedxml.py  test_docker_compose_prod.py  test_dockerfile_bootstrap.py  test_egress_integration.py  test_egress_policy.py  test_fixture_inventory.py  test_hgvs_redirect_functionality.py  test_host_origin_guard.py  test_logging_config.py  test_logging_middleware.py  test_logging_redaction.py  test_managers.py  test_mcp_errors.py  test_metrics.py  test_prod_logging_redaction.py  test_readme_tools.py  test_real_website_parsing.py  test_rest_validation.py  test_scraper_parsers.py  test_unified_server.py  test_user_agent.py  test_version_single_source.py
tests/unit/mcp/: __init__.py  test_bulk_tools.py  test_cache_presenter.py  test_capabilities_presenter.py  test_cost_tiers.py  test_envelope.py  test_error_leak_fencing.py  test_error_sanitation.py  test_next_commands.py  test_notfound_guard.py  test_presenter_shape_validation.py  test_pvs1_glossary.py  test_registries.py  test_resources.py  test_response_envelope_conformance.py  test_search_presenter.py  test_server_info.py  test_tool_catalog_docs.py  test_tool_names.py  test_tool_runtime.py  test_tool_surface_budget.py  test_tools.py  test_tools_dict_path.py  test_untrusted_content.py  test_untrusted_content_fencing.py  test_untrusted_content_list_item_schema.py  test_untrusted_content_mcp_runtime.py  test_validation.py  test_variant_presenter.py
