[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopvs1-link"
version = "1.2.0"
description = "A unified server providing REST API and MCP interfaces for autopvs1.bgi.com PVS1 variant data"
readme = "README.md"
authors = [
    { name = "AutoPVS1 Link Contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["genetics", "pvs1", "variant", "analysis", "mcp", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.48.0,<1.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "async-lru>=2.0.4,<3.0.0",
    "structlog>=24.4.0,<26.0.0",
    "asgi-correlation-id>=5.0.0,<6.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "defusedxml>=0.7.1",
    "orjson>=3.10.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.2.0,<7.0.0",
    "rich>=15.0.0,<16.0.0",
    "typer>=0.26.4,<1.0.0",
    "mcp[cli]>=1.27.2,<2.0.0",
    "fastmcp>=3.3.1,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.15.17,<1.0.0",
    "mypy>=2.1.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "types-defusedxml>=0.7.0.20260504",
]

[project.scripts]
autopvs1-link = "autopvs1_link.cli:main"
autopvs1-link-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/berntpopp/autopvs1-link"
Repository = "https://github.com/berntpopp/autopvs1-link"
Issues = "https://github.com/berntpopp/autopvs1-link/issues"

[tool.hatch.build.targets.wheel]
packages = ["autopvs1_link"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "S", "T20", "SIM", "RUF"]
ignore = ["S101", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T20"]
# Entry point scripts and the CLI legitimately print to stdout.
"server.py" = ["T20"]
"mcp_server.py" = ["T20"]
"autopvs1_link/cli.py" = ["T20"]
# Pre-Phase-4 unified_server prints status to stdout; refactored away in Phase 4.
"autopvs1_link/unified_server.py" = ["T20"]
# FastAPI dependency injection uses Depends() in argument defaults by design.
# B904: legacy raise-from chains in route exception handlers, refactored later.
"autopvs1_link/api/routes/*" = ["B008", "B904"]
"autopvs1_link/middleware/logging_middleware.py" = ["RUF013"]
"autopvs1_link/services/autopvs1_service.py" = ["RUF013"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    ".*site-packages.*",
    ".*/venv/.*",
    ".*/.venv/.*",
    "htmlcov/.*",
]

[[tool.mypy.overrides]]
module = [
    "async_lru.*",
    "structlog.*",
    "mcp.*",
    "fastmcp.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "httpx.*",
    "uvicorn.*",
    "bs4.*",
    "lxml.*",
]
ignore_missing_imports = true

# Transitional relaxation for legacy modules that predate strict typing.
# These overrides come off as Phase 3 (config/cli/retry rewrites) and Phase 4
# (MCP subpackage / unified_server split) replace each module.
[[tool.mypy.overrides]]
module = [
    "autopvs1_link.api.client_manager",
    "autopvs1_link.api.routes.cnv",
    "autopvs1_link.api.routes.gene",
    "autopvs1_link.api.routes.variant",
    "autopvs1_link.config",
    "autopvs1_link.logging_config",
    "autopvs1_link.middleware.logging_middleware",
    "autopvs1_link.services.autopvs1_service",
    "autopvs1_link.services.service_manager",
    "autopvs1_link.unified_server",
    "autopvs1_link.utils.cache_manager",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
no_implicit_optional = false
warn_unreachable = false
ignore_errors = true

# server.py and mcp_server.py are entry-point shims rewritten in Phase 4.
[[tool.mypy.overrides]]
module = ["server", "mcp_server"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["autopvs1_link"]
omit = [
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
